Fix Date Spacing

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,7 +17,8 @@
 }
 
 .wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr;
   padding: 0;
 }
 
